--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 
     </header>
 
+    <section class="banner">
+        <div class="slider"></div>
+    </section>
 
 
     <script src="script.js"></script>
