--- a/index.html
+++ b/index.html
@@ -1,44 +1,186 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tour</title>
-    <link rel="stylesheet" href="style.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-</head>
-<body>
-    
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <header class="header">
+      <a href="#" class="logo">Tours.</a>
 
-        <a href="#" class="logo">Tours.</a>
+      <div class="social-media">
+        <a href="#"><i class="bx bxl-twitter"></i></a>
+        <a href="#"><i class="bx bxl-facebook"></i></a>
+        <a href="#"><i class="bx bxl-instagram-alt"></i></a>
+        <a href="#"><i class="bx bxl-telegram"></i></a>
+      </div>
 
-        <div class="social-media">
-            <a href="#"><i class='bx bxl-twitter'></i></a>
-            <a href="#"><i class='bx bxl-facebook'></i></a>
-            <a href="#"><i class='bx bxl-instagram-alt'></i></a>
-            <a href="#"><i class='bx bxl-telegram'></i></a>
-        </div>    
-           
-
-        <nav class="navbar">
-            <a href="#">Destination</a>
-            <a href="#">Booking</a>
-            <a href="#">Services</a>
-            <a href="#">Contact</a>
-        </nav>
-
+      <nav class="navbar">
+        <a href="#">Destination</a>
+        <a href="#">Booking</a>
+        <a href="#">Services</a>
+        <a href="#">Contact</a>
+      </nav>
     </header>
 
     <section class="banner">
-        <div class="slider"></div>
+      <div class="slider">
+        <div class="slide">
+          <img src="Assets/coxbazar.jpeg" alt="" srcset="" />
+          <div class="left-info">
+            <div class="penetrate-blur">
+              <h1>Saint</h1>
+            </div>
+            <div class="content">
+              <h3>01. Saint Martin Tour</h3>
+              <p>
+                Natural Beauty: Saint Martin's Island is renowned for its
+                picturesque landscapes and natural beauty. The island offers
+                white sandy beaches, turquoise waters, and vibrant coral reefs,
+                making it an ideal destination for nature lovers and beach
+                enthusiasts. Coral Reefs: The island is surrounded by coral
+                reefs, making it a great spot for snorkeling and diving.
+                Tourists have the opportunity to explore the underwater world,
+                witnessing colorful coral formations and diverse marine life.
+              </p>
+              <a href="#" class="btn">More Details</a>
+            </div>
+          </div>
+          <div class="right-info">
+            <h1>Martin</h1>
+            <h3>Beach</h3>
+          </div>
+        </div>
+        <div class="slide">
+          <img src="Assets/Sylhet.jpeg" alt="" srcset="" />
+          <div class="left-info">
+            <div class="penetrate-blur">
+              <h1>Syl</h1>
+            </div>
+            <div class="content">
+              <h3>02. Sylhet Tour</h3>
+              <p>
+                Natural Beauty: Saint Martin's Island is renowned for its
+                picturesque landscapes and natural beauty. The island offers
+                white sandy beaches, turquoise waters, and vibrant coral reefs,
+                making it an ideal destination for nature lovers and beach
+                enthusiasts. Coral Reefs: The island is surrounded by coral
+                reefs, making it a great spot for snorkeling and diving.
+                Tourists have the opportunity to explore the underwater world,
+                witnessing colorful coral formations and diverse marine life.
+              </p>
+              <a href="#" class="btn">More Details</a>
+            </div>
+          </div>
+          <div class="right-info">
+            <h1>het</h1>
+            <h3>Forest</h3>
+          </div>
+        </div>
+        <div class="slide">
+          <img src="Assets/rangamati.jpeg" alt="" srcset="" />
+          <div class="left-info">
+            <div class="penetrate-blur">
+              <h1>Ranga</h1>
+            </div>
+            <div class="content">
+              <h3>03. Rangamati Tour</h3>
+              <p>
+                Natural Beauty: Saint Martin's Island is renowned for its
+                picturesque landscapes and natural beauty. The island offers
+                white sandy beaches, turquoise waters, and vibrant coral reefs,
+                making it an ideal destination for nature lovers and beach
+                enthusiasts. Coral Reefs: The island is surrounded by coral
+                reefs, making it a great spot for snorkeling and diving.
+                Tourists have the opportunity to explore the underwater world,
+                witnessing colorful coral formations and diverse marine life.
+              </p>
+              <a href="#" class="btn">More Details</a>
+            </div>
+          </div>
+          <div class="right-info">
+            <h1>Mati</h1>
+            <h3>Nature</h3>
+          </div>
+        </div>
+        <div class="slide">
+          <img src="Assets/bandarban2.jpeg" alt="" srcset="" />
+          <div class="left-info">
+            <div class="penetrate-blur">
+              <h1>Bandar</h1>
+            </div>
+            <div class="content">
+              <h3>04. Bandarban Tour</h3>
+              <p>
+                Natural Beauty: Saint Martin's Island is renowned for its
+                picturesque landscapes and natural beauty. The island offers
+                white sandy beaches, turquoise waters, and vibrant coral reefs,
+                making it an ideal destination for nature lovers and beach
+                enthusiasts. Coral Reefs: The island is surrounded by coral
+                reefs, making it a great spot for snorkeling and diving.
+                Tourists have the opportunity to explore the underwater world,
+                witnessing colorful coral formations and diverse marine life.
+              </p>
+              <a href="#" class="btn">More Details</a>
+            </div>
+          </div>
+          <div class="right-info">
+            <h1>ban</h1>
+            <h3>Hike</h3>
+          </div>
+        </div>
+        <div class="slide">
+          <img src="Assets/sundarban.jpg" alt="" srcset="" />
+          <div class="left-info">
+            <div class="penetrate-blur">
+              <h1>Sundar</h1>
+            </div>
+            <div class="content">
+              <h3>05. Sundarban Tour</h3>
+              <p>
+                Natural Beauty: Saint Martin's Island is renowned for its
+                picturesque landscapes and natural beauty. The island offers
+                white sandy beaches, turquoise waters, and vibrant coral reefs,
+                making it an ideal destination for nature lovers and beach
+                enthusiasts. Coral Reefs: The island is surrounded by coral
+                reefs, making it a great spot for snorkeling and diving.
+                Tourists have the opportunity to explore the underwater world,
+                witnessing colorful coral formations and diverse marine life.
+              </p>
+              <a href="#" class="btn">More Details</a>
+            </div>
+          </div>
+          <div class="right-info">
+            <h1>ban</h1>
+            <h3>Mountain</h3>
+          </div>
+        </div>
+      </div>
+
+      <div class="navigation">
+        <span class="prev-btn">
+            <i class='bx bx-chevron-left'></i>
+        </span>
+        <span class="next-btn">
+            <i class='bx bx-chevron-right'></i>
+        </span>
+      </div>
+
     </section>
 
-
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
